Add styling for horizontal rule

--- a/templates/index.html
+++ b/templates/index.html
@@ -102,6 +102,13 @@
             display: none;
         }
 
+        hr {
+            margin-top: 20px;
+            margin-bottom: 20px;
+            border: 0;
+            border-top: 1px solid #dddddd;
+        }
+
     </style>
 </head>
 <body>
