--- a/templates/index.html
+++ b/templates/index.html
@@ -109,6 +109,47 @@
             border-top: 1px solid #dddddd;
         }
 
+        input[type=number] {
+            width: 100%;
+            height: 50px;
+            padding: 0 20px;
+            font-size: 18px;
+            border: 1px solid #dddddd;
+            border-radius: 25px;
+            margin-top: 10px;
+        }
+
+        input[type=range] {
+            width: 100%;
+            height: 50px;
+            margin-top: 10px;
+            -webkit-appearance: none; /* WebKit/Blink */
+            appearance: none;
+            background: #dedede;
+            border-radius: 25px;
+            outline: none;
+        }
+
+        input[type=range]::-webkit-slider-thumb {
+            -webkit-appearance: none; /* WebKit/Blink */
+            appearance: none;
+            width: 20px;
+            height: 20px;
+            background: #0069d9;
+            border-radius: 50%;
+            cursor: pointer;
+        }
+
+        input[type=range]::-moz-range-thumb {
+            width: 20px;
+            height: 20px;
+            background: #0069d9;
+            border: none;
+            border-radius: 50%;
+            cursor: pointer;
+        }
+
+
     </style>
 </head>
 <body>
