--- a/templates/index.html
+++ b/templates/index.html
@@ -201,7 +201,11 @@ input[type=range]::-ms-thumb {
 }
 
 
-
+.hint {
+    font-size: 13px;
+    color: #777777;
+    margin-top: 10px;
+}
 
     </style>
 </head>
@@ -223,6 +227,7 @@ input[type=range]::-ms-thumb {
             <hr>
             <label for="camera-speed">Camera Speed:</label>
             <input type="number" id="camera-speed" value="1">
+            <p class="hint">Negative values will invert camera controls.</p>
             <hr>
         </div>
         <div class="main">
