--- a/templates/index.html
+++ b/templates/index.html
@@ -3,211 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Image to 3D Panorama</title>
-    <style>
-        * {
-            box-sizing: border-box;
-            margin: 0;
-            padding: 0;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        }
-        .container {
-            width: 100%;
-            height: 100vh;
-            display: flex;
-            flex-direction: row;
-        }
-        .sidebar {
-            width: 20%;
-            height: 100%;
-            background-color: #f7f7f7;
-            overflow-y: auto;
-            padding: 20px;
-        }
-        .main {
-            width: 60%;
-            height: 100%;
-            background-color: #ebebeb;
-            overflow-y: auto;
-            padding: 20px;
-            position: relative;
-        }
-        .preview {
-            width: 20%;
-            height: 100%;
-            background-color: #dedede;
-            overflow-y: auto;
-            padding: 20px;
-        }
-        h1 {
-            font-size: 28px;
-            font-weight: bold;
-            text-align: center;
-            margin-bottom: 20px;
-            color: #333333;
-        }
-        p {
-            font-size: 18px;
-            margin-bottom: 20px;
-            line-height: 1.5;
-            color: #555555;
-        }
-        label {
-            font-size: 16px;
-            font-weight: normal;
-            color: #777777;
-        }
-        input[type=file] {
-            display: none;
-            margin-bottom: 20px;
-        }
-        button {
-            display: block;
-            width: 100%;
-            height: 50px;
-            border: none;
-            border-radius: 25px;
-            color: white;
-            font-size: 18px;
-            font-weight: bold;
-            cursor: pointer;
-            margin-bottom: 20px;
-            transition: background-color 0.3s ease;
-        }
-        button:hover {
-            background-color: #0069d9;
-        }
-        button:focus {
-            outline: none;
-        }
-        .btn-success {
-            background-color: #4caf50;
-        }
-        .btn-info {
-            background-color: #2196f3;
-        }
-        .btn-success:hover {
-            background-color: #388e3c;
-        }
-        .btn-info:hover {
-            background-color: #1976d2;
-        }
-        img {
-            max-width: 100%;
-            height: auto;
-        }
-        #panorama-container {
-            display: none;
-        }
-        #fullscreen {
-            display: none;
-        }
-
-        hr {
-            margin-top: 20px;
-            margin-bottom: 20px;
-            border: 0;
-            border-top: 1px solid #dddddd;
-        }
-
-        input[type=number] {
-            width: 100%;
-            height: 50px;
-            padding: 0 20px;
-            font-size: 18px;
-            border: 1px solid #dddddd;
-            border-radius: 25px;
-            margin-top: 10px;
-        }
-
-        .range-container {
-    position: relative;
-    width: 100%;
-    height: 50px;
-    margin-top: 10px;
-}
-
-.range-container {
-    position: relative;
-    width: 100%;
-    height: 50px;
-    margin-top: 10px;
-}
-
-input[type=range] {
-    position: relative;
-    width: 100%; /* Account for handle width */
-    height: 100%;
-    margin: 0;
-    padding: 0;
-    -webkit-appearance: none;
-    appearance: none;
-    background: transparent;
-    outline: none;
-    z-index: 2; /* Place the fill behind the handle */
-}
-
-.range-fill {
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 100%;
-    /* It's a progress element, set the color with the background property */
-    width: 100%;
-    border-radius: 10px; /* Same as input's border-radius */
-    pointer-events: none;
-    z-index: 1; /* Place the fill behind the handle */
-}
-
-.range-fill::-webkit-progress-bar {
-    background-color: rgb(210, 210, 210);
-    border-radius: 10px; /* Rounded corners */
-}
-
-.range-fill::-webkit-progress-value {
-    background-color: #4caf50;
-    border-radius: 10px; /* Rounded corners */
-}
-
-input[type=range]::-webkit-slider-thumb {
-    -webkit-appearance: none;
-    appearance: none;
-    width: 30px; /* Handle width */
-    height: 60px; /* Handle height */
-    background: #ffffff;
-    border: 1px solid #dddddd;
-    border-radius: 10px; /* Rounded corners */
-    cursor: pointer;
-    z-index: 5; /* Place the handle above the fill */
-}
-
-input[type=range]::-moz-range-thumb {
-    width: 30px;
-    height: 60px;
-    background: #ffffff;
-    border: 1px solid #dddddd;
-    border-radius: 10px;
-    cursor: pointer;
-    z-index: 5;
-}
-
-input[type=range]::-ms-thumb {
-    width: 30px;
-    height: 60px;
-    background: #ffffff;
-    border: 1px solid #dddddd;
-    border-radius: 10px;
-    cursor: pointer;
-    z-index: 5;
-}
-
-
-.hint {
-    font-size: 13px;
-    color: #777777;
-    margin-top: 10px;
-}
-
-    </style>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
 </head>
 <body>
     <div class="container">
@@ -255,172 +51,7 @@ input[type=range]::-ms-thumb {
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script src="{{ url_for('static', filename='js/OrbitControls.js') }}"></script>
-    <script>
-        // Validate the file size and type before uploading
-        $(document).ready(function() {
-            $('#quality-slider').on('input', function() {
-                var value = $(this).val();
-                var percent = (value - $(this).attr('min')) / ($(this).attr('max') - $(this).attr('min'));
-                console.log(percent);
-                /// Green to Red based on percentage
-                var colors = {
-                    1.0: { id: 1, color: "#4caf50" },
-                    0.75: { id: 0.75, color: "#8bc34a" },
-                    0.5: { id: 0.5, color: "#dcc139" },
-                    0.25: { id: 0.25, color: "#ffa43b" },
-                    0.0: { id: 0, color: "#fc2d2d" } // Change the red color here
-                }
-                // Sort keys in descending order
-                var keys = Object.keys(colors).sort((a, b) => parseFloat(b) - parseFloat(a));
-
-                // Iterate through sorted keys to find the appropriate color
-                for (var i = 0; i < keys.length; i++) {
-                    var key = keys[i];
-                    var id = parseFloat(key);
-                    console.log(colors[key].id);
-                    if (percent >= id) {
-                        var color = colors[key].color;
-                        break;
-                    }
-                }
-
-
-                $(".range-fill").val(percent);
-                // Now we need to update the webkit progress value background color
-                // We need to edit the webkit progress value background color CSS rule of the stylesheet 0
-                var sheet = document.styleSheets[0];
-                var rules = sheet.cssRules || sheet.rules;
-                for (var i = 0; i < rules.length; i++) {
-                    if (rules[i].selectorText === ".range-fill::-webkit-progress-value") {
-                        rules[i].style.backgroundColor = color;
-                        break;
-                    }
-                }
-            });
-            $('#formhacker').click(function(e) {
-                e.preventDefault();
-                // First we need to click the file input to trigger the file selection dialog
-                $('#image').click();
-                // Now we need to wait till the user selects a file
-                $('#image').on('change', function() {
-                    // Now we can submit the form
-                    $('#upload-form').submit();
-                });
-            });
-            $('#upload-form').submit(function(e) {
-                var file = $('#image')[0].files[0];
-                var maxSize = 10 * 1024 * 1024; // 10 MB
-                var allowedTypes = ['image/jpeg', 'image/png', 'image/gif'];
-                if (file.size > maxSize) {
-                    alert('The file is too large. Please select a file smaller than 10 MB.');
-                    e.preventDefault();
-                }
-                if (!allowedTypes.includes(file.type)) {
-                    alert('The file type is not supported. Please select a JPEG, PNG, or GIF image.');
-                    e.preventDefault();
-                }
-            });
-        });
-
-        // Create a 3D panorama of the image using WebGL and Three.js
-        $(document).ready(function() {
-            $('#create-panorama').click(function() {
-                // Hide the button and show the panorama container
-                $('#panorama-container').show();
-                $('#fullscreen').show();
-
-                // Clear existing panorama
-                $('#panorama-wrapper').empty();
-
-                // Get the image source
-                var image = $('img')[0];
-                var src = image.src;
-
-                // Create a scene, a camera, and a renderer
-                var scene = new THREE.Scene();
-                var camera = new THREE.PerspectiveCamera(75, 800 / 600, 0.1, 1000);
-                var renderer = new THREE.WebGLRenderer();
-                // Totally Responsive Size  
-                renderer.setSize(800, 600);
-                var panoramaWrapper = document.getElementById('panorama-wrapper');
-                panoramaWrapper.appendChild(renderer.domElement);
-
-                // Create a sphere geometry
-                var geometry = new THREE.SphereGeometry(500, 60, 40);
-                geometry.scale(-1, 1, 1); // Invert the sphere
-                
-                // Create a texture from the image with quality settings
-                var quality = $('#quality-slider').val() / 100;
-                var texture = new THREE.TextureLoader().load(src);
-                renderer.setPixelRatio(window.devicePixelRatio * quality);
-                var material = new THREE.MeshBasicMaterial({map: texture});
-
-                // Create a mesh from the geometry and the material
-                var mesh = new THREE.Mesh(geometry, material);
-                scene.add(mesh);
-
-                // Create an orbit control to enable mouse interaction
-                var controls = new THREE.OrbitControls(camera, renderer.domElement);
-                controls.enableZoom = true;
-                controls.enablePan = false;
-                controls.minDistance = 100;
-                controls.maxDistance = 900;
-
-                // Set the camera speed
-                var cameraSpeed = parseFloat($('#camera-speed').val());
-                controls.rotateSpeed = cameraSpeed;
-                controls.zoomSpeed = cameraSpeed;
-
-                // Set the camera position and look at the center
-                camera.position.set(0, 0, 0);
-                camera.lookAt(scene.position);
-
-                // Function to handle window resize
-                function onWindowResize() {
-                    camera.aspect = panoramaWrapper.offsetWidth / panoramaWrapper.offsetHeight;
-                    camera.updateProjectionMatrix();
-                    renderer.setSize(panoramaWrapper.offsetWidth, panoramaWrapper.offsetHeight);
-                }
-                window.addEventListener('resize', onWindowResize);
-
-                // Render the scene
-                var animate = function() {
-                    requestAnimationFrame(animate);
-                    controls.update();
-                    renderer.render(scene, camera);
-                };
-                animate();
-            });
-
-            // Function to handle resizing of the renderer upon exiting fullscreen
-            function onFullscreenExit() {
-                if (document.fullscreenElement || document.mozFullScreenElement || document.webkitFullscreenElement || document.msFullscreenElement) return;
-                var panoramaWrapper = document.getElementById('panorama-wrapper');
-
-                panoramaWrapper.firstChild.remove();
-
-                // Click the button again to recreate the panorama
-                $('#create-panorama').click();
-            }
-
-            // Toggle the fullscreen mode
-            $('#fullscreen').click(function() {
-                var element = $('#panorama-wrapper')[0];
-                if (element.requestFullscreen) {
-                    element.requestFullscreen();
-                    document.addEventListener("fullscreenchange", onFullscreenExit, false);
-                } else if (element.mozRequestFullScreen) {
-                    element.mozRequestFullScreen();
-                    document.addEventListener("mozfullscreenchange", onFullscreenExit, false);
-                } else if (element.webkitRequestFullscreen) {
-                    element.webkitRequestFullscreen();
-                    document.addEventListener("webkitfullscreenchange", onFullscreenExit, false);
-                } else if (element.msRequestFullscreen) {
-                    element.msRequestFullscreen();
-                    document.addEventListener("MSFullscreenChange", onFullscreenExit, false);
-                }
-            });
-        });
+    <script src="{{ url_for('static', filename='js/pagehandler.js') }}"></script>
     </script>
 </body>
 </html>
