Add viewport meta tag for responsive design

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Image to 3D Panorama</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
+    <meta name='viewport' content='width=device-width'/>
 </head>
 <body>
     <div class="container">
