--- a/templates/index.html
+++ b/templates/index.html
@@ -62,6 +62,10 @@
             {% else %}
             <p>No image preview available.</p>
             {% endif %}
+            <div id="note-perf" class="note">
+            <hr>
+            <p class="hint">Rendered panoramas have the best performance on Firefox, Chrome, and Edge. If you still see lag or other issues, consider reducing render quality.</p>
+            </div>
         </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
