Add margin-bottom to images

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -88,6 +88,7 @@ button:focus {
 img {
     max-width: 100%;
     height: auto;
+    margin-bottom: 20px;
 }
 #panorama-container {
     display: none;
