--- a/templates/index.html
+++ b/templates/index.html
@@ -65,7 +65,7 @@
             <div id="note-perf" class="note">
             <hr>
             <p class="hint">Rendered panoramas have the best performance on Firefox, Chrome, and Edge. If you still see lag or other issues, consider reducing render quality.</p>
-            <p class="hint">Take a look at our <a href="https://lyubomirt.github.io/lookaround/" target="_blank">documentation</a> for more information.</p>
+            <p class="hint">Take a look at our <a href="https://lyubomirt.github.io/lookaround/" target="_blank">documentation</a> for more information or to contact us.</p>
             </div>
         </div>
     </div>
