--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -237,6 +237,7 @@ canvas {
     display: inline-block;
     width: 49px;
     height: 21px;
+    margin-left: 10px;
   }
   
   /* Hide default HTML checkbox */
@@ -253,7 +254,7 @@ canvas {
     top: 0;
     left: 0;
     right: 0;
-    bottom: 0;
+    bottom: 0.2px;
     background-color: #ccc;
     -webkit-transition: .4s;
     transition: .4s;
