--- a/templates/index.html
+++ b/templates/index.html
@@ -104,6 +104,8 @@
             <hr>
             <p class="hint">Rendered panoramas have the best performance on Firefox, Chrome, and Edge. If you still see lag or other issues, consider reducing render quality.</p>
             <p class="hint">Take a look at our <a href="https://lyubomirt.github.io/lookaround/" target="_blank">documentation</a> for more information or to contact us.</p>
+            <hr>
+            <p class="hint">This project is open-source. You can find the source code on <a href="https://github.com/LyubomirT/lookaround" target="_blank">GitHub</a>.</p>
             </div>
         </div>
     </div>
