Add SEO metadata to index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,12 @@
     <title>Image to 3D Panorama</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
     <meta name='viewport' content='width=device-width'/>
+    <!-- SEO -->
+    <meta name="description" content="Quickly create a 3D panorama from any image without worrying much about the technical details.">
+    <meta name="keywords" content="3D, panorama, image, 360, lookaround, look, around">
+    <meta name="author" content="Lyubomir Ternavskiy">
+    <meta name="robots" content="index, follow">
+    <meta name="language" content="English">
 </head>
 <body>
     <div class="container">
