Update page title in index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Image to 3D Panorama</title>
+    <title>Free 3D Panorama Creator - Lookaround</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
     <meta name='viewport' content='width=device-width'/>
     <!-- SEO -->
